# aws-lambda-conda-builder

./: .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  aws_conda_env_builder.py  entrypoint.sh  lambda_function.py  pyproject.toml
